--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <p>specially made for hTC Pico</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/niranjan94">niranjan94</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></span>
+          <span class="credits right">&nbsp;</span>
         </div>
 
         <h1>ECLIPSE KERNEL for PICO</h1>
